src/test/ui/associated-type-bounds/assoc-type-eq-with-dyn-atb-fail.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/assoc-type-eq-with-dyn-atb-fail.rs:26:28
   |
LL |     type Out = Box<dyn Bar<Assoc: Copy>>;
   |                            ^^^^^^^^^^^ the trait `Copy` is not implemented for `String`
   |
   = note: the return type of a function must have a statically known size

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
